# case-archiver

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  _t.txt  _version.py  archive.py  archive_engine.py  auto_write.py  build_cover.py  build_exe.bat  categories.yaml  classify.py  config_store.py  create_shortcut.ps1  dialogs.py  extractors.py  gui.py  launcher.vbs  llm_cache.py  llm_client.py  logger.py  make_icon.py  paths.py  pyproject.toml  requirements-dev.txt  requirements.txt  secure_store.py  style.qss  ui_widgets.py  workers.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
tests/: conftest.py  test_auto_write.py  test_build_cover.py  test_classify.py  test_concurrent_classify.py  test_config_store.py  test_e2e_archive.py  test_engine.py  test_extractors.py  test_gui_smoke.py  test_llm_cache.py  test_llm_helpers.py  test_manifest.py  test_paths.py  test_usage.py  test_workers.py
