[project]
name = "case-archiver"
version = "2.4.0"
description = "律师案件自动归档程序 — 按 13 项卷内目录标准分类、重命名、生成卷内目录"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "lm_lawyer" }]
keywords = ["legal", "archiving", "pyqt5", "document-classification", "deepseek"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Chinese (Simplified)",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.ruff]
line-length = 120
target-version = "py39"
exclude = ["venv", "build", "dist", ".venv"]

[tool.ruff.lint]
# E/F: pyflakes+pycodestyle, I: isort, B: bugbear
# 不启用 UP（pyupgrade）：项目兼容 py39，保留 List/Optional 写法
select = ["E", "F", "I", "B"]
ignore = [
    "E501",   # 行长由 line-length 控制
    "E402",   # 模块级 import 不在顶部（gui.py 需在 import PyQt5 前设环境变量）
    "B008",   # 函数默认值调用（Qt 模式常见）
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
